--- a/server-copy.cfg
+++ b/server-copy.cfg
@@ -7,7 +7,7 @@ seta g_motd "DMQ3A"     // message that appears when connecting
 seta sv_maxclients 16           // max number of clients than can connect
 seta sv_pure 1                  // pure server, no altered pak files
 seta g_quadfactor 4             // quad damage strength (3 is normal)
-seta g_friendlyFire 1           // friendly fire motherfucker
+seta g_friendlyFire 1           // friendly fire  
 
 // capture the flag
 //seta g_gametype 4               // 0:FFA, 1:Tourney, 2:FFA, 3:TD, 4:CTF
